--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,9 +8,7 @@ services:
     image: traefik:v2.10
     command:
       - "--api=true"
-      - "--api.dashboard=true"
       - "--providers.docker=true"
-      - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--certificatesresolvers.le.acme.email=edwardlanekemp@gmail.com"
@@ -19,10 +17,10 @@ services:
     ports:
       - "80:80"
       - "443:443"
-      - "8080:8080" # Restricted Traefik dashboard
+      - "8080:8080"
     volumes:
-      - "/path/to/acme.json:/acme.json"
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
+      - "./acme.json:/acme.json"
     networks:
       - test-app_default
     labels:
