--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,27 +7,22 @@ services:
   traefik:
     image: traefik:v2.10
     command:
-      - "--api=true"
       - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--certificatesresolvers.le.acme.email=edwardlanekemp@gmail.com"
       - "--certificatesresolvers.le.acme.storage=/acme.json"
       - "--certificatesresolvers.le.acme.tlschallenge=true"
+      - "--api.insecure=false" # Disable the dashboard
     ports:
       - "80:80"
       - "443:443"
-      - "8080:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./acme.json:/acme.json"
     networks:
       - test-app_default
-    labels:
-      - "traefik.http.routers.traefik.rule=Host(`traefik.edward-codes.com`)"
-      - "traefik.http.routers.traefik.service=api@internal"
-      - "traefik.http.routers.traefik.entrypoints=websecure"
-      - "traefik.http.routers.traefik.tls.certresolver=le"
     deploy:
       replicas: 1
       restart_policy:
