--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,15 +47,11 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.SSH_KEY }}  # SSH key to access the VPS
           script: |
-            # Check if project directory exists, clone if it doesn't
-            if [ ! -d "/home/${{ secrets.VPS_USER }}/websites/test-app" ]; then
-              echo "Project directory does not exist. Cloning repository..."
-              git clone git@github.com:Steadyx/test-app.git /home/${{ secrets.VPS_USER }}/websites/test-app
-            else
-              echo "Project directory exists. Pulling latest changes..."
-              cd /home/${{ secrets.VPS_USER }}/websites/test-app
-              git pull origin main
-            fi
+            # Navigate to project directory
+            cd /home/${{ secrets.VPS_USER }}/websites/test-app
+
+            # Pull latest changes
+            git pull origin main
 
             # Ensure acme.json exists for Let's Encrypt
             if [ ! -f /home/${{ secrets.VPS_USER }}/websites/test-app/acme.json ]; then
@@ -64,14 +60,13 @@ jobs:
               chmod 600 /home/${{ secrets.VPS_USER }}/websites/test-app/acme.json
             fi
 
-            # Stop Nginx to avoid port conflicts
+            # Stop and disable Nginx to avoid port conflicts
             sudo systemctl stop nginx || echo "Nginx not running."
             sudo systemctl disable nginx
 
-            # Remove exited containers and unused networks
+            # Remove exited containers and prune unused networks
             docker ps -aq --filter "status=exited" | xargs --no-run-if-empty docker rm
             docker network prune -f
 
             # Deploy the updated stack
-            cd /home/${{ secrets.VPS_USER }}/websites/test-app
             docker stack deploy -c docker-compose.prod.yml test-app
