--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -27,21 +27,21 @@ services:
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./acme.json:/acme.json"  # Ensure acme.json is present with correct permissions
+    labels:
+      - "traefik.enable=true"
+      # Optional: Enable Traefik dashboard securely
+      # Uncomment and configure the following labels if you wish to expose the Traefik dashboard
+      # - "traefik.http.routers.traefik.rule=Host(`traefik.edward-codes.com`)"
+      # - "traefik.http.routers.traefik.entrypoints=websecure"
+      # - "traefik.http.routers.traefik.tls.certresolver=le"
+      # - "traefik.http.services.traefik.loadbalancer.server.port=8080"
     networks:
       - test-app_default
     deploy:
       replicas: 1
       restart_policy:
         condition: on-failure
-      labels:
-        # Optional: Enable Traefik dashboard securely
-        # Uncomment and configure the following labels if you wish to expose the Traefik dashboard
-        #- "traefik.enable=true"
-        #- "traefik.http.routers.traefik.rule=Host(`traefik.edward-codes.com`)"
-        #- "traefik.http.routers.traefik.entrypoints=websecure"
-        #- "traefik.http.routers.traefik.tls.certresolver=le"
-        #- "traefik.http.services.traefik.loadbalancer.server.port=8080"
-    # Secrets can be defined here if needed
+      # No labels here; labels are defined at the service level
 
   # Frontend service
   frontend:
@@ -78,3 +78,8 @@ services:
         condition: on-failure
     environment:
       - NODE_ENV=production
+
+# Optional: Define secrets if needed
+# secrets:
+#   traefik_acme:
+#     file: ./acme.json
