--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,24 +14,25 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build and push frontend image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./frontend
-          platforms: linux/amd64
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/frontend:latest
 
       - name: Build and push backend image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: ./backend
-          platforms: linux/amd64
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/backend:latest
 
@@ -54,19 +55,30 @@ jobs:
             git pull origin main
 
             # Ensure acme.json exists for Let's Encrypt
-            if [ ! -f /home/${{ secrets.VPS_USER }}/websites/test-app/acme.json ]; then
+            if [ ! -f ./acme.json ]; then
               echo "Creating acme.json file for Let's Encrypt."
-              touch /home/${{ secrets.VPS_USER }}/websites/test-app/acme.json
-              chmod 600 /home/${{ secrets.VPS_USER }}/websites/test-app/acme.json
+              touch ./acme.json
+              chmod 600 ./acme.json
             fi
 
             # Stop and disable Nginx to avoid port conflicts
             sudo systemctl stop nginx || echo "Nginx not running."
             sudo systemctl disable nginx
 
-            # Remove exited containers and prune unused networks
-            docker ps -aq --filter "status=exited" | xargs --no-run-if-empty docker rm
+            # Remove existing stack
+            docker stack rm test-app
+
+            # Wait until the stack is removed
+            while docker stack ls | grep -q test-app; do
+              echo "Waiting for stack test-app to be removed..."
+              sleep 5
+            done
+
+            # Remove all exited containers related to test-app
+            docker ps -a --filter "name=test-app" --filter "status=exited" -q | xargs --no-run-if-empty docker rm
+
+            # Prune unused networks
             docker network prune -f
 
             # Deploy the updated stack
-            docker stack deploy -c docker-compose.prod.yml test-app
+            sudo docker stack deploy -c docker-compose.prod.yml test-app
