--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -48,40 +48,43 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.SSH_KEY }}  # SSH key to access the VPS
           script: |
+            # Store the sudo password in a variable
+            SUDO_PASSWORD="${{ secrets.VPS_USER_PWD }}"
+            
             # Navigate to project directory
             cd /home/edwardkemp/websites/test-app
 
             # Pull latest changes
-            git pull origin main
+            echo "$SUDO_PASSWORD" | sudo -S git pull origin main
 
             # Ensure acme.json exists for Let's Encrypt
             if [ ! -f ./acme.json ]; then
               echo "Creating acme.json file for Let's Encrypt."
-              touch ./acme.json
-              chmod 600 ./acme.json
+              echo "$SUDO_PASSWORD" | sudo -S touch ./acme.json
+              echo "$SUDO_PASSWORD" | sudo -S chmod 600 ./acme.json
             fi
 
             # Stop and disable Nginx to avoid port conflicts
-            sudo systemctl stop nginx || echo "Nginx not running."
-            sudo systemctl disable nginx
+            echo "$SUDO_PASSWORD" | sudo -S systemctl stop nginx || echo "Nginx not running."
+            echo "$SUDO_PASSWORD" | sudo -S systemctl disable nginx
 
             # Remove Docker stack if it exists
-            docker stack rm test-app || echo "Stack test-app does not exist."
+            echo "$SUDO_PASSWORD" | sudo -S docker stack rm test-app || echo "Stack test-app does not exist."
 
             # Wait until the stack is removed
-            while docker stack ls | grep -q test-app; do
+            while sudo docker stack ls | grep -q test-app; do
               echo "Waiting for stack test-app to be removed..."
               sleep 5
             done
 
             # Remove all containers related to test-app
-            docker ps -a --filter "name=test-app" -q | xargs --no-run-if-empty docker rm -f
+            sudo docker ps -a --filter "name=test-app" -q | xargs --no-run-if-empty sudo docker rm -f
 
             # Remove all networks related to test-app
-            docker network ls | grep test-app_default | awk '{print $1}' | xargs --no-run-if-empty docker network rm
+            sudo docker network ls | grep test-app_default | awk '{print $1}' | xargs --no-run-if-empty sudo docker network rm
 
             # Prune unused Docker resources
-            docker system prune -f --volumes
+            sudo docker system prune -f --volumes
 
             # Deploy the updated stack
-            sudo docker stack deploy -c docker-compose.prod.yml test-app
+            echo "$SUDO_PASSWORD" | sudo -S docker stack deploy -c docker-compose.prod.yml test-app
