--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,46 +49,48 @@ jobs:
           key: ${{ secrets.SSH_KEY }}  # SSH key to access the VPS
           script: |
             # Store the sudo password in a variable
+            # Store the sudo password in a variable
             SUDO_PASSWORD="${{ secrets.VPS_USER_PWD }}"
-            
+            sudoN() { echo "$SUDO_PASSWORD" | sudo -S "$@"; }
+
             echo "Navigating to project directory..."
             cd /home/edwardkemp/websites/test-app
 
             echo "Pulling latest changes..."
-            echo "$SUDO_PASSWORD" | sudo -S git pull origin main
+            sudoN git pull origin main
 
             echo "Ensuring acme.json exists..."
             if [ ! -f ./acme.json ]; then
               echo "Creating acme.json file for Let's Encrypt."
-              echo "$SUDO_PASSWORD" | sudo -S touch ./acme.json
-              echo "$SUDO_PASSWORD" | sudo -S chmod 600 ./acme.json
+              sudoN touch ./acme.json
+              sudoN chmod 600 ./acme.json
             fi
 
             echo "Stopping Nginx..."
-            echo "$SUDO_PASSWORD" | sudo -S systemctl stop nginx || echo "Nginx not running."
+            sudoN systemctl stop nginx || echo "Nginx not running."
 
             echo "Disabling Nginx..."
-            echo "$SUDO_PASSWORD" | sudo -S systemctl disable nginx
+            sudoN systemctl disable nginx
 
             echo "Removing Docker stack..."
-            echo "$SUDO_PASSWORD" | sudo -S docker stack rm test-app || echo "Stack test-app does not exist."
+            sudoN docker stack rm test-app || echo "Stack test-app does not exist."
 
             echo "Waiting for stack removal..."
-            while sudo docker stack ls | grep -q test-app; do
+            while sudoN docker stack ls | grep -q test-app; do
               echo "Waiting for stack test-app to be removed..."
               sleep 5
             done
 
             echo "Removing related containers..."
-            sudo docker ps -a --filter "name=test-app" -q | xargs --no-run-if-empty sudo docker rm -f
+            sudoN docker ps -a --filter "name=test-app" -q | xargs --no-run-if-empty sudoN docker rm -f
 
             echo "Removing related networks..."
-            sudo docker network ls | grep test-app_default | awk '{print $1}' | xargs --no-run-if-empty sudo docker network rm
+            sudoN docker network ls | grep test-app_default | awk '{print $1}' | xargs --no-run-if-empty sudoN docker network rm
 
             echo "Pruning Docker system..."
-            sudo docker system prune -f --volumes
+            sudoN docker system prune -f --volumes
 
             echo "Deploying the updated stack..."
-            echo "$SUDO_PASSWORD" | sudo -S docker stack deploy -c docker-compose.prod.yml test-app
+            sudoN docker stack deploy -c docker-compose.prod.yml test-app
 
             echo "Deployment completed."
