--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -17,14 +17,13 @@ services:
       - "--entrypoints.web.http.redirections.entryPoint.permanent=true"
       - "--certificatesresolvers.le.acme.email=edwardlanekemp@gmail.com"
       - "--certificatesresolvers.le.acme.storage=/acme.json"
-      - "--certificatesresolvers.le.acme.tlsChallenge=true" # Using TLS-ALPN-01 challenge
-      - "--api.insecure=false" # Disable Traefik dashboard
+      - "--certificatesresolvers.le.acme.tlsChallenge=true"
     ports:
       - "80:80"
       - "443:443"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./acme.json:/acme.json"  # Ensure acme.json is present with correct permissions
+      - "./acme.json:/acme.json"
     networks:
       - test-app_default
     deploy:
@@ -33,10 +32,11 @@ services:
         condition: on-failure
 
   frontend:
-    image: edwardkemp/frontend:latest
+    build:
+      context: ./frontend
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.frontend.rule=Host(`edward-codes.com`) && !PathPrefix(`/api`)"
+      - "traefik.http.routers.frontend.rule=Host(`edward-codes.com`)"
       - "traefik.http.services.frontend.loadbalancer.server.port=80"
       - "traefik.http.routers.frontend.entrypoints=websecure"
       - "traefik.http.routers.frontend.tls.certresolver=le"
@@ -46,22 +46,3 @@ services:
       replicas: 2
       restart_policy:
         condition: on-failure
-
-  backend:
-    image: edwardkemp/backend:latest
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.backend.rule=Host(`edward-codes.com`) && PathPrefix(`/api`)"
-      - "traefik.http.middlewares.backend-strip-prefix.stripprefix.prefixes=/api"
-      - "traefik.http.routers.backend.middlewares=backend-strip-prefix"
-      - "traefik.http.services.backend.loadbalancer.server.port=3000"
-      - "traefik.http.routers.backend.entrypoints=websecure"
-      - "traefik.http.routers.backend.tls.certresolver=le"
-    networks:
-      - test-app_default
-    deploy:
-      replicas: 2
-      restart_policy:
-        condition: on-failure
-    environment:
-      - NODE_ENV=production
