--- a/frontend/nginx/default.conf
+++ b/frontend/nginx/default.conf
@@ -1,16 +1,11 @@
-# Main server block for local-only Nginx
 server {
-    listen 8080;
+    listen 80;
     server_name localhost;
 
     root /usr/share/nginx/html;
     index index.html;
 
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ =404;
     }
-
-    # Logging
-    access_log /var/log/nginx/edward-codes_access.log;
-    error_log /var/log/nginx/edward-codes_error.log;
 }
