--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,10 @@
 FROM nginx:alpine
 
-# Remove the default Nginx configuration
-RUN rm /etc/nginx/conf.d/default.conf
-
-# Remove the IPv6 entrypoint script to prevent Nginx from enabling IPv6
-RUN rm -f /docker-entrypoint.d/10-listen-on-ipv6-by-default.sh
-
-# Copy your custom Nginx configuration
+# Copy the Nginx configuration
 COPY nginx/default.conf /etc/nginx/conf.d/default.conf
 
-# Copy frontend static files
+# Copy the index.html file to the web root
 COPY index.html /usr/share/nginx/html/
 
-# Expose port 80
+# Expose the default Nginx port
 EXPOSE 80
-
-# Start Nginx
-CMD ["nginx", "-g", "daemon off;"]
