--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginx:alpine
 
 # Copy the Nginx configuration
-COPY nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
 
 # Copy the index.html file to the web root
 COPY index.html /usr/share/nginx/html/
