--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -32,7 +32,7 @@ services:
         condition: on-failure
 
   frontend:
-    image: ${{ secrets.DOCKER_USERNAME }}/frontend:latest  # Use the image from Docker Hub
+    image: ${secrets.DOCKER_USERNAME}/frontend:latest
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.frontend.rule=Host(`edward-codes.com`)"
