refactor(docker): rename services and update configuration

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,11 +5,12 @@ networks:
     driver: overlay
 
 services:
-  traefik:
+  traefik-main:
     image: traefik:v2.10
     command:
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
+      - "--providers.docker.network=test-app_default"
       - "--entrypoints.web.address=:80"
       - "--entrypoints.websecure.address=:443"
       - "--entrypoints.web.http.redirections.entryPoint.to=websecure"
@@ -18,13 +19,10 @@ services:
       - "--certificatesresolvers.le.acme.email=edwardlanekemp@gmail.com"
       - "--certificatesresolvers.le.acme.storage=/acme.json"
       - "--certificatesresolvers.le.acme.tlsChallenge=true"
-      # Optional: Enable Traefik Dashboard for Monitoring
-      - "--api.insecure=true"  # For testing purposes; consider securing in production
+      - "--api.insecure=true"  # For testing purposes; secure in production
     ports:
       - "80:80"
       - "443:443"
-      # Optional: Expose Traefik Dashboard on a separate port (e.g., 8080)
-      # - "8080:8080"
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
       - "./acme.json:/acme.json"
@@ -35,31 +33,27 @@ services:
       restart_policy:
         condition: on-failure
 
-  frontend:
+  frontend-main:
     image: edwardkemp/frontend:latest
     labels:
       - "traefik.enable=true"
-
       # Router for Non-WWW Domain
-      - "traefik.http.routers.frontend.rule=Host(`edward-codes.com`)"
-      - "traefik.http.routers.frontend.entrypoints=websecure"
-      - "traefik.http.routers.frontend.tls.certresolver=le"
-      - "traefik.http.services.frontend.loadbalancer.server.port=80"
-
+      - "traefik.http.routers.frontend-main.rule=Host(`edward-codes.com`)"
+      - "traefik.http.routers.frontend-main.entrypoints=websecure"
+      - "traefik.http.routers.frontend-main.tls.certresolver=le"
+      - "traefik.http.services.frontend-main.loadbalancer.server.port=80"
       # Router for WWW Domain with Redirect Middleware
-      - "traefik.http.routers.frontend-www.rule=Host(`www.edward-codes.com`)"
-      - "traefik.http.routers.frontend-www.entrypoints=websecure"
-      - "traefik.http.routers.frontend-www.tls.certresolver=le"
-      - "traefik.http.routers.frontend-www.middlewares=redirect-www"
-
+      - "traefik.http.routers.frontend-www-main.rule=Host(`www.edward-codes.com`)"
+      - "traefik.http.routers.frontend-www-main.entrypoints=websecure"
+      - "traefik.http.routers.frontend-www-main.tls.certresolver=le"
+      - "traefik.http.routers.frontend-www-main.middlewares=redirect-www-main"
       # Middleware to Redirect WWW to Non-WWW
-      - "traefik.http.middlewares.redirect-www.redirectregex.regex=^https?://www\\.(.*)"
-      - "traefik.http.middlewares.redirect-www.redirectregex.replacement=https://$${1}"
-      - "traefik.http.middlewares.redirect-www.redirectregex.permanent=true"
-
+      - "traefik.http.middlewares.redirect-www-main.redirectregex.regex=^https?://www\\.(.*)"
+      - "traefik.http.middlewares.redirect-www-main.redirectregex.replacement=https://$${1}"
+      - "traefik.http.middlewares.redirect-www-main.redirectregex.permanent=true"
     networks:
       - test-app_default
     deploy:
-      replicas: 2
+      replicas: 1
       restart_policy:
         condition: on-failure
